<resources>
    <string name="app_name">KELOMPOK 5</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="verify_password">Verify Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="log_in">Login</string>
    <string name="txt_login">Login</string>
    <string name="welcome_user">Welcome user</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
</resources>
